default album art image for missing album art

--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,12 @@
                         </div>
                     </div>
                     <!-- List group -->
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <span class="left" id="queue-text">Queue:</span>
+                        </div>
+                    </div>
                     <ul class="list-group" id="queue">
                     </ul>
 
