--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>nodeplayer listener</h1>
+            <div class="logo"><img src="media/logo.png" /> nodeplayer listener <sup><sup>alpha</sup></sup></div>
 
             <div class="row">
                 <div class="col-lg-8">
