toggle for music streaming

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,10 @@
                         </button>
                     </div>
 
+                    <button id="stream" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Toggle music streaming" aria-label="Toggle music streaming">
+                        <span id="streamicon" class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
+                    </button>
+
                     <button id="mute" type="button" class="btn btn-default" aria-label="Mute">
                         <span id="muteicon" class="glyphicon glyphicon-volume-up" aria-hidden="true"></span>
                     </button>
