search field placeholder

--- a/client/index.html
+++ b/client/index.html
@@ -52,9 +52,9 @@
                     <div class="row clear">
                         <div class="col-lg-12">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="search-terms">
+                                <input type="text" class="form-control" id="search-terms" placeholder="Search for music">
                                 <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button" id="search-button" onclick="search();">Search!</button>
+                                    <button class="btn btn-default" type="button" id="search-button" onclick="search();">Go!</button>
                                 </span>
                             </div>
                         </div>
