--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>nodeplayer listener</title>
+        <title>nodeplayer weblistener</title>
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="logo"><img src="media/logo.png" /> nodeplayer listener <sup><sup>alpha</sup></sup></div>
+            <div class="logo"><img src="media/logo.png" /> nodeplayer weblistener <sup><sup>alpha</sup></sup></div>
 
             <div class="row">
                 <div class="col-lg-8">
