--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="media/favicon.ico">
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/jquery.cookie.js"></script>
         <script src="js/jquery.tmpl.min.js"></script>
