consistent margin size

--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
 
             <div class="row">
                 <div class="col-lg-8">
-                    <ul class="list-group" id="now-playing">
+                    <ul class="list-group" id="now-playing-container">
                     </ul>
                     <div id="controls" class="btn-group" role="group" aria-label="...">
                         <button id="previous" type="button" class="btn btn-default" aria-label="Previous">
