use relative paths that are independent of current root

--- a/client/index.html
+++ b/client/index.html
@@ -7,19 +7,19 @@
 
         <title>nodeplayer</title>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/png" href="media/favicon.ico">
-        <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="/weblistener/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/weblistener/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="/weblistener/styles.css">
+        <link rel="icon" type="image/png" href="/weblistener/media/favicon.ico">
+        <script src="/weblistener/js/jquery-1.11.1.min.js"></script>
+        <script src="/weblistener/js/jquery-ui.min.js"></script>
         <script src="js/jquery.ui.touch-punch.min.js"></script>
-        <script src="js/jquery.cookie.js"></script>
-        <script src="js/jquery.tmpl.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/underscore-min.js"></script>
-        <script src="js/socket.io-1.2.0.js"></script>
-        <script src="listener.js"></script>
+        <script src="/weblistener/js/jquery.cookie.js"></script>
+        <script src="/weblistener/js/jquery.tmpl.min.js"></script>
+        <script src="/weblistener/js/bootstrap.min.js"></script>
+        <script src="/weblistener/js/underscore-min.js"></script>
+        <script src="/weblistener/js/socket.io-1.2.0.js"></script>
+        <script src="/weblistener/listener.js"></script>
     </head>
     <body>
         <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="Login" aria-hidden="true">
@@ -63,7 +63,7 @@
         </div>
 
         <div class="container">
-            <div class="logo"><img src="media/logo.png" /> nodeplayer <sup><sup>alpha</sup></sup></div>
+            <div class="logo"><img src="/weblistener/media/logo.png" /> nodeplayer <sup><sup>alpha</sup></sup></div>
 
             <div class="row">
                 <div class="col-lg-8">
@@ -133,6 +133,6 @@
             </div>
         </div>
         <audio id="audio" autoplay="yes" preload="auto"></audio>
-        <a href="https://github.com/FruitieX/nodeplayer" target="_blank"><img style="position: absolute; top: 15px; right: 15px; border: 0;" src="media/GitHub-Mark-32px.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/FruitieX/nodeplayer" target="_blank"><img style="position: absolute; top: 15px; right: 15px; border: 0;" src="/weblistener/media/GitHub-Mark-32px.png" alt="Fork me on GitHub"></a>
     </body>
 </html>
